k8s/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jenkins-ingress
  namespace: jenkins

spec:
  ingressClassName: nginx

  rules:
  - host: jenkins.frontend.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: jenkins

            port:
              number: 8080
